fix: overflow auto

--- a/src/pages/authorization/authorizationPage.scss
+++ b/src/pages/authorization/authorizationPage.scss
@@ -13,6 +13,7 @@
     width: 100%;
     height: 100%;
     padding-top: 5vw;
+    overflow: auto;
 
     & h1 {
         font-family: 'PermanentMarker';
